--- a/faq.html
+++ b/faq.html
@@ -46,7 +46,7 @@
         <div class="row">
           <div class="col-sm-3 col-xs-12"> 
             <!-- Header Logo -->
-            <div class="logo"><a title="Magento Commerce" href="index.html"><img alt="Magento Commerce" src="images/logo.png"></a></div>
+            <div class="logo"><a title="Magento Commerce" href="index.html"><img alt="Magento Commerce" src="images/logo/logo.png" height="150" width="150"></a></div>
             <!-- End Header Logo --> 
           </div>
           <div class="col-lg-9 col-xs-12 right_menu">
@@ -120,12 +120,12 @@
         <div class="nav-inner col-lg-12">
           <ul id="nav" class="hidden-xs">
             <li class="level0 parent drop-menu"><a href="index.html"><span>Home</span></a>
-              <ul class="level1">
+              <!--<ul class="level1">
                 <li class="level1 first parent"><a href="index.html"><span>Home Version 1</span></a></li>
                 <li class="level1 parent"><a href="../version_2/index.html"><span>Home Version 2</span></a></li>
                 <li class="level1 parent"><a href="../version_3/index.html"><span>Home Version 3</span></a></li>
            
-              </ul>
+              </ul>-->
             </li>
             <li class="level0 parent drop-menu"><a href="#"><span>Pages</span></a>
               <ul class="level1">
@@ -155,75 +155,75 @@
                 <li class="level1"><a href="404error.html"><span>404 Error Page</span></a></li>
               </ul>
             </li>
-            <li class="mega-menu"><a href="grid.html" class="level-top"><span>Women</span></a>
+          <li class="mega-menu"><a href="grid.html" class="level-top"><span>Book</span></a>
               <div style="left: 0px; display: none;" class="level0-wrapper dropdown-6col">
                 <div class="container">
                   <div class="level0-wrapper2">
                     <div class="col-1">
                       <div class="nav-block nav-block-center">
                         <ul class="level0">
-                          <li class="level1 nav-6-1 parent item"><a href="grid.html" class=""><span>Stylish Bag</span></a>
-                            <ul class="level1">
+                          <li class="level1 nav-6-1 parent item"><a href="grid.html" class=""><span>Sách giáo khoa</span></a>
+                            <!--<ul class="level1">
                               <li class="level2 nav-6-1-1"><a href="grid.html" class=""><span>Clutch Handbags</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html" class=""><span>Diaper Bags</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html" class=""><span>Bags</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html" class=""><span>Hobo handbags</span></a></li>
-                            </ul>
+                            </ul>-->
                           </li>
-                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Material Bag</span></a>
-                            <ul class="level1">
+                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Sách tham khảo</span></a>
+                           <!-- <ul class="level1">
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Beaded Handbags</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Fabric Handbags</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Handbags</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Leather Handbags</span></a></li>
-                            </ul>
+                            </ul>-->
                           </li>
-                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Shoes</span></a>
-                            <ul class="level1">
+                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Sách ngoại ngữ</span></a>
+                            <!--<ul class="level1">
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Flat Shoes</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Flat Sandals</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Boots</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Heels</span></a></li>
-                            </ul>
+                            </ul>-->
                           </li>
-                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Jwellery</span></a>
-                            <ul class="level1">
+                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Sách thiếu nhi</span></a>
+                            <!--<ul class="level1">
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Bracelets</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid-2.html"><span>Necklaces &amp; Pendent</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Pendants</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Pins &amp; Brooches</span></a></li>
-                            </ul>
+                            </ul>-->
                           </li>
-                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Dresses</span></a>
-                            <ul class="level1">
+                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Sách kinh tế</span></a>
+                            <!--<ul class="level1">
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Casual Dresses</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Evening</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Designer</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Party</span></a></li>
-                            </ul>
+                            </ul>-->
                           </li>
-                          <li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Swimwear</span></a>
+                          <!--<li class="level1 nav-6-1 parent item"><a href="grid.html"><span>Swimwear</span></a>
                             <ul class="level1">
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Swimsuits</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="#/swimwear/beach-clothing.html"><span>Beach Clothing</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Clothing</span></a></li>
                               <li class="level2 nav-6-1-1"><a href="grid.html"><span>Bikinis</span></a></li>
                             </ul>
-                          </li>
+                          </li>-->
                         </ul>
                       </div>
                     </div>
                     <!--nav-block nav-block-center-->
-                    <div class="col-2">
+               <!--     <div class="col-2">
                       <div class="menu_image"><a href="#" title=""><img src="images/menu_image.jpg" alt="menu_image"></a></div>
                       <div class="menu_image1"><a href="#" title=""><img src="images/menu_image1.jpg" alt="menu_image"></a></div>
                     </div>
-                  </div>
-                  <!--level0-wrapper2--> </div>
-              </div>
-            </li>
-            <li class="mega-menu"><a href="grid.html" class="level-top"><span>Men</span></a>
-              <div  style="left: 0px; display: none;" class="level0-wrapper dropdown-6col">
+                  </div>-->
+                  <!--level0-wrapper2--><!-- </div>
+              </div> 
+            </li> -->
+            <li class="mega-menu"><a href="grid.html" class="level-top"><span>Từ điển</span></a>
+              <!--<div  style="left: 0px; display: none;" class="level0-wrapper dropdown-6col">
                 <div class="container">
                   <div class="level0-wrapper2">
                     <div class="nav-block nav-block-center">
@@ -277,9 +277,9 @@
                           </ul>
                         </li>
                       </ul>
-                    </div>
+                    </div>-->
                     <!--level0-wrapper2-->
-                    <div class="nav-add">
+                 <!--   <div class="nav-add">
                       <div class="push_item">
                         <div class="push_img"><a href="#"><img alt="sunglass" src="images/menu_man_sunglass.png"></a></div>
                       </div>
@@ -295,10 +295,10 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div>-->
             </li>
-            <li class="mega-menu"><a href="grid.html" class="level-top"><span>Electronics</span></a>
-              <div style="left: 0px; display: none;" class="level0-wrapper dropdown-6col">
+           <li class="mega-menu"><a href="grid.html" class="level-top"><span>Truyện tranh</span></a>
+             <!-- <div style="left: 0px; display: none;" class="level0-wrapper dropdown-6col">
                 <div class="container">
                   <div class="level0-wrapper2">
                     <div class="nav-block nav-block-center">
@@ -353,9 +353,9 @@
                         </li>
                       </ul>
                     </div>
-                  </div>
+                  </div>-->
                   <!--level0-wrapper2-->
-                  <div class="nav-add">
+             <!--     <div class="nav-add">
                     <div class="push_item">
                       <div class="push_img"><a href="#"><img alt="phone" src="images/menu_ele_phone.png"></a></div>
                     </div>
@@ -370,10 +370,10 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div>-->
             </li>
-            <li class="mega-menu"><a class="level-top" href="grid.html"><span>Furniture</span></a>
-              <div style="left: 0px; display: none;" class="level0-wrapper dropdown-6col">
+         <li class="mega-menu"><a class="level-top" href="grid.html"><span>Tiểu thuyết</span></a>
+             <!--<div style="left: 0px; display: none;" class="level0-wrapper dropdown-6col">
                 <div class="container">
                   <div class="level0-wrapper2">
                     <div class="nav-block nav-block-center grid12-8 itemgrid itemgrid-4col">
@@ -411,16 +411,16 @@
                           </ul>
                         </li>
                       </ul>
-                    </div>
+                    </div>-->
                     <!--nav-block nav-block-center-->
-                    <div class="nav-block nav-block-right std grid12-4"><a href="#"><img src="images/menu_furniture_2.png" alt="furniture"></a> </div>
-                    <!--nav-block nav-block-right std grid12-4--> </div>
-                </div>
+                   <!-- <div class="nav-block nav-block-right std grid12-4"><a href="#"><img src="images/menu_furniture_2.png" alt="furniture"></a> </div>-->
+                    <!--nav-block nav-block-right std grid12-4--><!-- </div>
+                </div>-->
                 <!--level0-wrapper2--> 
-              </div>
+             <!--</div> -->
             </li>
-            <li class="level0 nav-8 level-top"><a href="grid.html" class="level-top"><span>Kids</span></a></li>
-            <li class="nav-custom-link mega-menu"> <a class="level-top" href="#"><span>Custom</span></a>
+            <li class="level0 nav-8 level-top"><a href="grid.html" class="level-top"><span>Đời sống</span></a></li>
+           <!-- <li class="nav-custom-link mega-menu"> <a class="level-top" href="#"><span>Custom</span></a>
               <div class="level0-wrapper custom-menu" style="left: 0px; display: none;">
                 <div class="container">
                   <div class="header-nav-dropdown-wrapper clearer">
@@ -447,20 +447,20 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li>-->
           </ul>
           <div class="menu_top">
             <div class="top-cart-contain pull-right"> 
               <!-- Top Cart -->
               <div class="mini-cart">
-                <div data-toggle="dropdown" data-hover="dropdown" class="basket dropdown-toggle"><a href="#"><span class="hidden-xs">Shopping Cart (2)</span></a></div>
+                <div data-toggle="dropdown" data-hover="dropdown" class="basket dropdown-toggle"><a href="shopping_cart.html"><span class="hidden-xs">Shopping Cart (2)</span></a></div>
                 <div>
                   <div class="top-cart-content" style="display: none;">
                     <div class="block-subtitle">
                       <div class="top-subtotal">2 items, <span class="price">$259.99</span> </div>
                       <!--top-subtotal-->
                       <div class="pull-right">
-                        <button title="View Cart" class="view-cart" type="button"><span>View Cart</span></button>
+                        <button title="View Cart" class="view-cart" type="button"><a href="shopping_cart.html"><span>View Cart</span></a></button>
                       </div>
                       <!--pull-right--> 
                     </div>
@@ -476,7 +476,7 @@
                         </div>
                       </li>
                       <li class="item last">
-                        <div class="item-inner"><a class="product-image" title="Sample Product" href="product_detail.html"><img alt="Sample Product" src="products-images/product3.jpg"></a>
+                        <div class="item-inner"><a class="product-image" title="Sample Product" href="#"><img alt="Sample Product" src="products-images/product3.jpg"></a>
                           <div class="product-details">
                             <div class="access"><a class="btn-remove1" title="Remove This Item" href="#">Remove</a> <a class="btn-edit" title="Edit item" href="#"><i class="icon-pencil"></i><span class="hidden">Edit item</span></a> </div>
                             <!--access--> <strong>1</strong> x <span class="price">$80.00</span>
@@ -486,7 +486,7 @@
                       </li>
                     </ul>
                     <div class="actions">
-                      <button class="btn-checkout" title="Checkout" type="button"><span>Checkout</span></button>
+                      <button class="btn-checkout" title="Checkout" type="button"><a href="shopping_cart.html"><span style="color:white;">Checkout</span></a></button>
                     </div>
                     <!--actions--> 
                   </div>
@@ -706,7 +706,7 @@
       <div class="footer-middle">
         <div class="container">
           <div class="row">
-            <div style="text-align:center"><a href="index.html"><img src="images/footer-logo.png" alt="footer-logo"></a></div>
+            <div style="text-align:center"><a href="index.html"><img src="images/logo/logo.png" height="150" width="150" alt="footer-logo"></a></div>
             <address>
             <i class="icon-location-arrow"></i> 123 Main Street, Anytown, CA 12345  USA <i class="icon-mobile-phone"></i><span> +(408) 394-7557</span> <i class="icon-envelope"></i><a href="mailto:support@magikcommerce.com">support@magikcommerce.com</a>
             </address>
