--- a/wishlist.html
+++ b/wishlist.html
@@ -583,7 +583,7 @@
         <li><a href="compare.html">Compare</a></li>
         
         <li><a href="faq.html">FAQ</a></li>
-        <li><a href="quick_view.html">Quick view</a></li>
+        <li><a href="quick_view.php">Quick view</a></li>
         <li><a href="login.php">Login</a></li>
         
         <li><a href="blog.html">Blog</a>
