--- a/blog_detail.html
+++ b/blog_detail.html
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-sm-3 col-xs-12"> 
             <!-- Header Logo -->
-            <div class="logo"><a title="Magento Commerce" href="index.php"><img alt="Magento Commerce" src="images/logo/logo.png" style="height:150px; width:150px;"></a></div>
+            <div class="logo"><a title="Magento Commerce" href="index.php"><img alt="Magento Commerce" src="images/logo/logo.png" style="height:150px; "></a></div>
             <!-- End Header Logo --> 
           </div>
           <div class="col-lg-9 col-xs-12 right_menu">
@@ -857,7 +857,7 @@
       <div class="footer-middle">
         <div class="container">
           <div class="row">
-            <div style="text-align:center"><a href="index.php"><img src="images/logo/logo.png" height="150" width="150" alt=""></a></div>
+            <div style="text-align:center"><a href="index.php"><img src="images/logo/logo.png" height="150" alt=""></a></div>
             <address>
             <i class="icon-location-arrow"></i> 12 Nguyễn Văn Bảo,Phường 4 ,Q.Gò Vấp,TP Hồ Chí Minh<i class="icon-mobile-phone"></i><span>0387120640</span> <i class="icon-envelope"></i><a href="mailto:support@magikcommerce.com">lethoa22012020@gmail.com</a>
             </address>
@@ -911,7 +911,7 @@
         <li> <a href="about_us.html">About us</a></li>
         <li><a href="compare.html">Compare</a></li>
  	   <li><a href="faq.html">FAQ</a></li>
-        <li><a href="quick_view.html">Quick view</a></li>
+        <li><a href="quick_view.php">Quick view</a></li>
         <li><a href="login.php">Login</a></li>
         <li><a href="blog.html">Blog</a>
           <ul>
