--- a/contact_us.html
+++ b/contact_us.html
@@ -57,8 +57,8 @@
               <div class="links">
                 <div class="myaccount"><a title="My Account" href="login.php"><span class="hidden-xs">Tài khoản</span></a></div>
                 <!--<div class="wishlist"><a title="My Wishlist" href="wishlist.html"><span class="hidden-xs">Wishlist</span></a></div>-->
-                <div class="check"><a title="Checkout" href="checkout.html"><span class="hidden-xs">Thanh toán</span></a></div>
-                <div class="demo"><a title="Blog" href="blog.html"><span class="hidden-xs">Bài viết</span></a></div>
+                <div class="check"><a title="Checkout" href="checkout.php"><span class="hidden-xs">Thanh toán</span></a></div>
+                <div class="demo"><a title="Blog" href="blog.php"><span class="hidden-xs">Bài viết</span></a></div>
                 <!-- Header Company -->
                 <!--<div class="dropdown block-company-wrapper hidden-xs"><a role="button" data-toggle="dropdown" data-target="#" class="block-company dropdown-toggle" href="#">Company <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
@@ -133,7 +133,7 @@
                <!-- <li class="level1 nav-10-2"><a href="list.html"><span>List</span></a></li>-->
                 <!--<li class="level1 nav-10-3"><a href="product_detail.html"><span>Product Detail</span></a></li>-->
                 <li class="level1 nav-10-4"><a href="shopping_cart.php"><span>Giỏ hàng</span></a></li>
-                <li class="level1 first parent"><a href="checkout.html"><span>Thanh toán</span></a>  </li>
+                <li class="level1 first parent"><a href="checkout.php"><span>Thanh toán</span></a>  </li>
                <!-- <li class="level1 nav-10-4"><a href="wishlist.html"><span>Wishlist</span></a></li>-->
               <!--  <li class="level1"><a href="dashboard.html"><span>Dashboard</span></a></li>
                 <li class="level1"><a href="multiple_addresses.html"><span>Multiple Addresses</span></a></li>
@@ -144,7 +144,7 @@
                 <li class="level1"><a href="quick_view.html"><span>Quick view </span></a></li>-->
                 <li class="level1"><a href="login.php"><span>Đăng nhập</span></a></li>
                 
-                <li class="level1 first parent"><a href="blog.html"><span>Bài viết</span></a>
+                <li class="level1 first parent"><a href="blog.php"><span>Bài viết</span></a>
                  <!-- <ul class="level2 right-sub">
                     <li class="level2 nav-2-1-1 first"><a href="blog_detail.html"><span>Blog Detail</span></a></li>
                   </ul>-->
@@ -809,10 +809,10 @@
     <li><a href="#">Pages</a>
       <ul>
         <li><a href="grid.php">Grid</a></li>
-        <li> <a href="list.html">List</a></li>
+        <li> <a href="list.php">List</a></li>
         <li> <a href="product_detail.php">Product Detail</a></li>
         <li> <a href="shopping_cart.php">Shopping Cart</a></li>
-        <li><a href="checkout.html">Checkout</a></li>
+        <li><a href="checkout.php">Checkout</a></li>
         <li> <a href="wishlist.html">Wishlist</a></li>
         <li> <a href="dashboard.html">Dashboard</a></li>
         <li> <a href="multiple_addresses.html">Multiple Addresses</a></li>
@@ -821,9 +821,9 @@
  	   <li><a href="faq.html">FAQ</a></li>
         <li><a href="quick_view.php">Quick view</a></li>
         <li><a href="login.php">Login</a></li>
-        <li><a href="blog.html">Blog</a>
+        <li><a href="blog.php">Blog</a>
           <ul>
-            <li><a href="blog_detail.html">Blog Detail</a></li>
+            <li><a href="blog_detail.php">Blog Detail</a></li>
           </ul>
         </li>
         <li><a href="contact_us.html">Contact us</a></li>
